5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3997/executions/1635_2447.log
== TEST (2019-04-08 14:49:53) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta X"
else: 
	msg = "Troco de Y"
-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:50:03) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta X"
else: 
	msg = "Troco de Y"
-- EXECUTION TIME:
0.12329
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:

-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:

-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:50:11) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta X"
else: 
	msg = "Troco de Y"

-- OUTPUT:
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:50:28) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta X"
else: 
	msg = "Troco de Y"
print(msg)
-- OUTPUT:
Falta X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:50:37) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta X"
else: 
	msg = "Troco de Y"
print(msg)
-- EXECUTION TIME:
0.123523
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta X
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de Y
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Falta X
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:50:46) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta X"
else: 
	msg = "Troco de Y"
print(msg) 

-- OUTPUT:
Falta X
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:52:44) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta" X
else: 
	msg = "Troco de" Y
print(msg) 

-- ERROR:
File "XXXX", line 5
    msg = "Falta" X
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:54:04) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta (X)"
else: 
	msg = "Troco de (Y)" 
print(msg) 

-- OUTPUT:
Falta (X)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:54:12) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (pgmto <= preco):
	msg = "Falta (X)"
else: 
	msg = "Troco de (Y)" 
print(msg) 

-- OUTPUT:
Falta (X)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:54:58) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))

if (preco < pgmto):
	msg = "Falta (X)"
else: 
	msg = "Troco de (Y)" 
print(msg) 

-- OUTPUT:
Troco de (Y)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:58:06) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))
x = preco - pgmto
y = pgmto - preco

if (preco < pgmto):
	msg = ("Falta", X)
else: 
	msg = ("Troco de", Y) 
print(msg) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    msg = ("Troco de", Y) 
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:59:04) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))
x = preco - pgmto
y = pgmto - preco

if (preco < pgmto):
	print("Falta", X)
else: 
	print("Troco de", Y) 

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    print("Troco de", Y) 
NameError: name 'Y' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:59:20) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))
X = preco - pgmto
Y = pgmto - preco

if (preco < pgmto):
	print("Falta", X)
else: 
	print("Troco de", Y) 

-- OUTPUT:
Troco de -26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:00:09) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))
X = preco - pgmto
Y = pgmto - preco

if (preco > pgmto):
	print("Falta", X)
else: 
	print("Troco de", Y) 

-- OUTPUT:
Falta 26.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 15:00:19) 
-- CODE:
preco = float(input("Digite um numero:"))
pgmto = float(input("Digite um numero:"))
X = preco - pgmto
Y = pgmto - preco

if (preco > pgmto):
	print("Falta", X)
else: 
	print("Troco de", Y) 

-- EXECUTION TIME:
0.148979
-- TEST CASE 1:
---- input:
38.0
12.0
---- correct output:
Falta 26.0
---- user output:
Falta 26.0
-- TEST CASE 2:
---- input:
32.0
60.0
---- correct output:
Troco de 28.0
---- user output:
Troco de 28.0
-- TEST CASE 3:
---- input:
516.0
516.0
---- correct output:
Troco de 0.0
---- user output:
Troco de 0.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
